# lumbar-spine-classification

./: .gitignore  README.md  pyproject.toml
src/config/: config-sample.yaml  config.py
src/custom_logging/: logger.py
src/lumbar_spine_classification/: data.py  main.py  utils.py
src/lumbar_spine_classification/models/: cnn_models.py
src/scripts/: download_kaggle_dataset.py
