[tool.poetry]
name = "lumbar-spine-classification"
version = "0.1.0"
description = ""
authors = ["remi.coscoy"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
PyYAML = "^6.0.2"
wandb = "^0.18.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
